[tool.poetry]
name = "keyphrase-extraction"
version = "0.1.0"
description = ""
authors = ["koukyo1994 <arabiannight1994@yahoo.co.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^0.24.2"
mecab-python3 = "^1.0.4"
unidic-lite = "^1.0.8"
keybert = "^0.4.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.16"
yake = {git = "https://github.com/LIAAD/yake"}
pke = {git = "https://github.com/boudinfl/pke"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
